Change dotnet pack to use nuget pack internally.  This still uses the same dotnet pack arguments and translates them into the nuget pack arguments even though that will change going forward.

--- a/TestAssets/TestProjects/AppWithDependencyOnToolWithOutputName/project.json
+++ b/TestAssets/TestProjects/AppWithDependencyOnToolWithOutputName/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0-*",
+  "version": "1.0.0-rc",
   "buildOptions": {
     "emitEntryPoint": true
   },
@@ -14,7 +14,7 @@
   },
   "tools": {
     "ToolWithOutputName": {
-      "version": "1.0.0",
+      "version": "1.0.0-rc",
       "target": "package"
     }
   }
