--- a/TestAssets/TestProjects/AppWithDirectDependencyWithOutputName/project.json
+++ b/TestAssets/TestProjects/AppWithDirectDependencyWithOutputName/project.json
@@ -4,7 +4,7 @@
   },
   "dependencies": {
     "ToolWithOutputName": {
-      "version": "1.0.0",
+      "version": "1.0.0-rc",
       "target": "package"
     },
     "Microsoft.NETCore.App": {
