--- a/src/Microsoft.DotNet.TestFramework/project.json
+++ b/src/Microsoft.DotNet.TestFramework/project.json
@@ -1,5 +1,6 @@
 {
   "version": "1.0.0-preview3-*",
+  "authors": ["dotnet"],
   "description": "Microsoft.DotNet.TestFramework Class Library",
   "buildOptions": {
     "keyFile": "../../tools/Key.snk"
