--- a/TestAssets/TestPackages/ToolWithOutputName/project.json
+++ b/TestAssets/TestPackages/ToolWithOutputName/project.json
@@ -1,5 +1,7 @@
 {
-  "version": "1.0.0",
+  "version": "1.0.0-rc",
+  "authors": ["dotnet"],
+  "description": "test",
   "buildOptions": {
     "outputName": "dotnet-tool-with-output-name",
     "emitEntryPoint": true
