--- a/TestAssets/TestPackages/dotnet-hello/v2/dotnet-hello/project.json
+++ b/TestAssets/TestPackages/dotnet-hello/v2/dotnet-hello/project.json
@@ -1,5 +1,7 @@
 {
-  "version": "2.0.0",
+  "version": "2.0.0-rc",
+  "authors": ["dotnet"],
+  "description": "test",
   "buildOptions": {
     "emitEntryPoint": true
   },
