--- a/TestAssets/TestProjects/AppWithDirectAndToolDependency/project.json
+++ b/TestAssets/TestProjects/AppWithDirectAndToolDependency/project.json
@@ -1,12 +1,12 @@
 {
-  "version": "1.0.0-*",
+  "version": "1.0.0-rc",
   "buildOptions": {
     "emitEntryPoint": true
   },
   "dependencies": {
     "Microsoft.NETCore.App": "1.0.0-rc3-004391",
     "dotnet-hello": {
-      "version": "1.0.0",
+      "version": "1.0.0-rc",
       "target": "package"
     }
   },
@@ -28,7 +28,7 @@
   },
   "tools": {
     "dotnet-portable": {
-      "version": "1.0.0",
+      "version": "1.0.0-rc",
       "target": "package"
     }
   }
