--- a/TestAssets/TestProjects/AppWithToolDependency/project.json
+++ b/TestAssets/TestProjects/AppWithToolDependency/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0-*",
+  "version": "1.0.0-rc",
   "buildOptions": {
     "emitEntryPoint": true
   },
@@ -11,7 +11,7 @@
   },
   "tools": {
     "dotnet-portable": {
-      "version": "1.0.0",
+      "version": "1.0.0-rc",
       "target": "package"
     }
   },
