--- a/src/Microsoft.DotNet.Compiler.Common/project.json
+++ b/src/Microsoft.DotNet.Compiler.Common/project.json
@@ -1,5 +1,7 @@
 {
   "version": "1.0.0-preview3-*",
+  "authors": ["dotnet"],
+  "description": "Microsoft.DotNet.Compiler.Common",
   "buildOptions": {
     "keyFile": "../../tools/Key.snk"
   },
