--- a/src/Microsoft.DotNet.ProjectModel/project.json
+++ b/src/Microsoft.DotNet.ProjectModel/project.json
@@ -1,5 +1,7 @@
 {
   "version": "1.0.0-rc4-*",
+  "authors": ["dotnet"],
+  "description": "Microsoft.DotNet.ProjectModel",
   "buildOptions": {
     "keyFile": "../../tools/Key.snk"
   },
@@ -9,8 +11,8 @@
       "target": "project"
     },
     "Newtonsoft.Json": "7.0.1",
-    "NuGet.Packaging": "3.5.0-rc-1285",
-    "NuGet.RuntimeModel": "3.5.0-rc-1285",
+    "NuGet.Packaging": "3.5.0-rc-1351",
+    "NuGet.RuntimeModel": "3.5.0-rc-1351",
     "System.Reflection.Metadata": "1.3.0-rc3-24201-00"
   },
   "frameworks": {
