--- a/src/Microsoft.DotNet.InternalAbstractions/project.json
+++ b/src/Microsoft.DotNet.InternalAbstractions/project.json
@@ -1,6 +1,7 @@
 {
   "description": "Abstractions for making code that uses file system and environment testable.",
   "version": "1.0.0-rc3-*",
+  "authors": ["dotnet"],
   "buildOptions": {
     "warningsAsErrors": true,
     "keyFile": "../../tools/Key.snk",
