Upping referenced version of NuGet to 1365.

--- a/TestAssets/TestProjects/AppWithDirectDependencyWithOutputName/project.json
+++ b/TestAssets/TestProjects/AppWithDirectDependencyWithOutputName/project.json
@@ -17,7 +17,7 @@
   },
   "tools": {
     "dotnet-dependency-tool-invoker": {
-      "version": "1.0.0-*",
+      "version": "1.0.0-rc-*",
       "imports": [
         "dnxcore50",
         "portable-net45+win8"
