--- a/TestAssets/TestProjects/EndToEndTestApp/project.json
+++ b/TestAssets/TestProjects/EndToEndTestApp/project.json
@@ -1,5 +1,7 @@
 {
-  "version": "1.0.0-*",
+  "version": "1.0.0-rc-*",
+  "authors": ["test"],
+  "description": "End to End Test App",
   "buildOptions": {
     "emitEntryPoint": true,
     "embed": {
