--- a/TestAssets/TestProjects/TestAppSimple/project.json
+++ b/TestAssets/TestProjects/TestAppSimple/project.json
@@ -1,5 +1,7 @@
 {
   "version": "1.0.0-*",
+  "authors": ["test"],
+  "description": "Test App Simple",
   "buildOptions": {
     "emitEntryPoint": true
   },
