--- a/TestAssets/TestProjects/TestLibraryWithConfiguration/project.json
+++ b/TestAssets/TestProjects/TestLibraryWithConfiguration/project.json
@@ -1,5 +1,7 @@
 {
-  "version": "1.0.0-*",
+  "version": "1.0.0-rc-*",
+  "authors": ["test"],
+  "description": "Test Library With Configuration",
   "buildOptions": {
     "nowarn": [
       "CS1591"
