--- a/src/dotnet/project.json
+++ b/src/dotnet/project.json
@@ -21,10 +21,10 @@
   },
   "dependencies": {
     "NuGet.Commands": {
-      "version": "3.5.0-rc-1449",
+      "version": "3.5.0-rc-1455",
       "exclude": "compile"
     },
-    "NuGet.CommandLine.XPlat": "3.5.0-rc-1449",
+    "NuGet.CommandLine.XPlat": "3.5.0-rc-1455",
     "Newtonsoft.Json": "7.0.1",
     "System.Text.Encoding.CodePages": "4.0.1-rc3-24201-00",
     "System.Diagnostics.FileVersionInfo": "4.0.0-rc3-24201-00",
@@ -54,7 +54,8 @@
     "Microsoft.Win32.Registry": {
       "version": "4.0.0-rc3-24201-00",
       "exclude": "compile"
-    }
+    },
+    "Microsoft.Extensions.PlatformAbstractions": "1.0.0-rc2-20581"
   },
   "frameworks": {
     "netcoreapp1.0": {
